--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 		<!-- tell user to upload image -->
 		<div class = "upload">
 			<h2>The world needs fox pictures.</h2>
-			<p> <span>Share your pictures with the world!</span> please help us by allowing access to your location. The information we collect can contribute to more informed natural resource management decisions and aids local animal control in keeping princeton and its residents safe. 
-			</p>
-		</div>
+			<p> <span>Share your pictures with the world!</span> Information collected can contribute to more informed natural resource management decisions and aids local animal control in keeping princeton and its residents safe. Click the button below to start uploading your photos and location.</p>
+	    </div>
 		
 		<!-- user upload button -->
 		<div class="uploadBtn">
