--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
 			<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
 		</div>
 
+		<!-- map -->
+		<div class="mapSection">
+			<hr>
+			<h2>Reported Fox Sightings.</h2>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+
+			<div class="map">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.966275993817!2d-74.65955857036741!3d40.343094113400596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6d8cd98b6e9%3A0x2ba7ed6fa90024f!2sPrinceton%20University!5e0!3m2!1sen!2sus!4v1668295323634!5m2!1sen!2sus" width = 70% height = "450px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+		</div>
+
 		<!-- footer -->
-			<footer class="footer2">
-				<a href="#head">back to top</a>
-				<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
+			<footer class="footer1">
+				<a href="#head" id="end2">back to top</a>
+				<p id="end1">coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
 				 </p>
 			</footer>
 		
