fix upload button

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		
 		<!-- user upload button -->
 		<div class="uploadBtn">
-			<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
-		</div>
+			<a href="upload.html"><label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
+			</a></div>
 
 		<!-- map -->
 		<div class="mapSection">
