--- a/upload.html
+++ b/upload.html
@@ -97,10 +97,10 @@
 			<!--else the user is outside the campus, can't upload image-->
 
 		<!-- footer -->
-			<footer class="footer2">
-				<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
+		<footer>
+			<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
 				 </p>
-			</footer>
+		</footer>
 		
 </body>
 </html>
