--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 
 		<!-- footer -->
-			<footer class="footer1">
+			<footer>
 				<a href="#head" id="end2">back to top</a>
 				<p id="end1">coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
 				 </p>
