--- a/upload.html
+++ b/upload.html
@@ -98,8 +98,9 @@
 
 		<!-- footer -->
 		<footer>
-			<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
-				 </p>
+			<a href="#head" id="end2">back to top</a>
+			<p id="end1">coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
+			 </p>
 		</footer>
 		
 </body>
