bold back to top

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<!-- footer -->
 			<footer>
-				<a href="#head" id="end2">back to top</a>
+				<a href="#head" id="end2"><b>back to top</b></a>
 				<p id="end1">coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
 				 </p>
 			</footer>
