fix back to top

--- a/upload.html
+++ b/upload.html
@@ -10,7 +10,7 @@
 </head> 
 <body>
 		<!--logo -->
-		<div class="head">
+		<div class="head" id="head">
 			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
 			<a href="index.html"> 
 				<h1> Princeton Fox Sightings</h1>
