--- a/upload.html
+++ b/upload.html
@@ -11,7 +11,7 @@
 <body>
 		<!--logo -->
 		<div class="head" id="head">
-			<img src="static/images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
+			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
 			<a href="index.html"> 
 				<h1> Princeton Fox Sightings</h1>
 			</a>
@@ -58,7 +58,7 @@
 		
 				<!-- user upload button -->
 				<div class="uploadBtn">
-					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="static/images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>
+					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>
 				</div>
 
 		<!-- display image-->
@@ -68,9 +68,9 @@
 					<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 					<img id="output">
 				</li>
-				<li id="second"><img src="static/images/foxButterfly.jpeg" width = "100" id="pic2">
+				<li id="second"><img src="images/foxButterfly.jpeg" width = "100" id="pic2">
 					<br><br>
-					<img src="static/images/closeFox.jpeg" width = "100" id="pic3">
+					<img src="images/closeFox.jpeg" width = "100" id="pic3">
 				</li>
 			</ul>
 		</div>
