--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 		<!--logo -->
 		<div class="head" id="head">
-			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
+			<img src="pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
 			<a href="index.html"> 
 				<h1> Princeton Fox Sightings</h1>
 			</a>
@@ -26,7 +26,7 @@
 		
 		<!-- user upload button -->
 		<div class="uploadBtn">
-			<a href="upload.html"><label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
+			<a href="upload.html"><label for="file" style="cursor: pointer;" id="uploadButton"> <img src="arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
 			</a></div>
 
 		<!-- map -->
