--- a/upload.html
+++ b/upload.html
@@ -58,7 +58,13 @@
 		
 				<!-- user upload button -->
 				<div class="uploadBtn">
-					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>
+
+					<form>
+						<label for="foxPhoto" id="uploadButton"> <img src="arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here <input type="file" id="foxPhoto" name="foxPhoto" accept="image/*"> </label>
+					</form>
+
+
+					<!--<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>-->
 				</div>
 
 		<!-- display image-->
