--- a/upload.html
+++ b/upload.html
@@ -60,7 +60,11 @@
 				<div class="uploadBtn">
 
 					<form>
-						<label for="foxPhoto" id="uploadButton"> <img src="arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here <input type="file" id="foxPhoto" name="foxPhoto" accept="image/*"> </label>
+						<label for="foxPhoto" id="uploadButton"> 
+							<img src="arrow-up-circle.png" width = "25" title="upCircle" id="up"> 
+							Upload here 
+							<input type="file" id="foxPhoto" name="foxPhoto" accept="image/*"> 
+						</label>
 					</form>
 
 
