--- a/upload.html
+++ b/upload.html
@@ -65,7 +65,7 @@
 		<div class="imageDisplay">
 			<ul>
 				<li id="first">
-					<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
+					<input type="file"  accept="*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 					<img id="output">
 				</li>
 				<li id="second"><img src="foxButterfly.jpeg" width = "100" id="pic2">
@@ -74,6 +74,7 @@
 				</li>
 			</ul>
 		</div>
+
 
 				<!-- computer displays image of fox -->
 				<script>
