--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 		<!--logo -->
 		<div class="head" id="head">
-			<img src="pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
-			<a href="index.html"> 
+			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
+			<a href="images/index.html"> 
 				<h1> Princeton Fox Sightings</h1>
 			</a>
 		</div>
