--- a/upload.html
+++ b/upload.html
@@ -11,8 +11,8 @@
 <body>
 		<!--logo -->
 		<div class="head" id="head">
-			<img src="pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
-			<a href="index.html"> 
+			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
+			<a href="images/index.html"> 
 				<h1> Princeton Fox Sightings</h1>
 			</a>
 		</div>
@@ -58,7 +58,7 @@
 		
 				<!-- user upload button -->
 				<div class="uploadBtn">
-					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>
+					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>
 				</div>
 
 		<!-- display image-->
@@ -68,9 +68,9 @@
 					<input type="file"  accept="*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 					<img id="output">
 				</li>
-				<li id="second"><img src="foxButterfly.jpeg" width = "100" id="pic2">
+				<li id="second"><img src="images/foxButterfly.jpeg" width = "100" id="pic2">
 					<br><br>
-					<img src="closeFox.jpeg" width = "100" id="pic3">
+					<img src="images/closeFox.jpeg" width = "100" id="pic3">
 				</li>
 			</ul>
 		</div>
@@ -82,16 +82,6 @@
 				var image = document.getElementById('output');
 				image.src = URL.createObjectURL(event.target.files[0]);
 				};
-
-				fetch('https://upload.estuary.tech/content/add', {
-					method: "POST",
-					headers: {
-						Authorization: 'Bearer EST630a2c84-4998-4f69-b6a6-ca1f5d166f8aARY',
-					},
-					body: image.src
-				}).then((response) => {
-					console.log(response);
-				});
 				</script>
 		
 			<!--else the user is outside the campus, can't upload image-->
