--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		<!-- user upload button -->
 		<div class="uploadBtn">
-			<a href="upload.html"><label for="file" style="cursor: pointer;" id="uploadButton"> <img src="arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
+			<a href="upload.html"><label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> Upload here</label>
 			</a></div>
 
 		<!-- map -->
