--- a/index.html
+++ b/index.html
@@ -36,7 +36,32 @@
 			<p>view locations of past fox sightings on the map below.</p>
 
 			<div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.966275993817!2d-74.65955857036741!3d40.343094113400596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6d8cd98b6e9%3A0x2ba7ed6fa90024f!2sPrinceton%20University!5e0!3m2!1sen!2sus!4v1668295323634!5m2!1sen!2sus" width = 70% height = "450px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<script>
+			let lati = 0.0;
+			let longi = 0.0;
+			const successCallback = (position) => {
+				console.log(position);
+				lati = position.coords.latitude;
+				longi = position.coords.longitude
+				console.log(latlon);
+			};
+			const errorCallback = (error) => {
+				console.error(error);
+			};
+			navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+			
+			const loca = { lat: lati, lng: longi };
+			// The map, centered at Uluru
+			const map = new google.maps.Map(document.getElementById("map"), {
+				zoom: 4,
+				center: loca,
+			});
+			const marker = new google.maps.Marker({
+				position: loca,
+				map: map,
+			});
+		</script>
+				<iframe src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKc9MmKdtVR-UjphRknOT4svvR7dRweQg&callback=initMap" width = 70% height = "450px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</div>
 
