--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 			<p>view locations of past fox sightings on the map below.</p>
 
 			<div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.966275993817!2d-74.65955857036741!3d40.343094113400596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6d8cd98b6e9%3A0x2ba7ed6fa90024f!2sPrinceton%20University!5e0!3m2!1sen!2sus!4v1668295323634!5m2!1sen!2sus" width = 70% height = "450px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe 
+				width="600"
+				height="450"
+				style="border:0"
+				loading="lazy"
+				allowfullscreen
+				referrerpolicy="no-referrer-when-downgrade"
+				src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAKc9MmKdtVR-UjphRknOT4svvR7dRweQg&q=Princeton+University,Princeton+NJ">
+			  </iframe>
 			</div>
 		</div>
 
