--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				loading="lazy"
 				allowfullscreen
 				referrerpolicy="no-referrer-when-downgrade"
-				src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAKc9MmKdtVR-UjphRknOT4svvR7dRweQg&q=Princeton+University,Princeton+NJ">
+				src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAKc9MmKdtVR-UjphRknOT4svvR7dRweQg&q=Butler+College,Princeton+NJ">
 			  </iframe>
 			</div>
 		</div>
